@@ -211,21 +211,33 @@ class ApiQueryImageInfo extends ApiQueryBase {
 	 */
 	static function getInfo( $file, $prop, $result, $scale = null ) {
 		$vals = array();
+		// Timestamp is shown even if the file is revdelete'd in interface
+		// so do same here.
 		if ( isset( $prop['timestamp'] ) ) {
 			$vals['timestamp'] = wfTimestamp( TS_ISO_8601, $file->getTimestamp() );
 		}
-		if ( isset( $prop['user'] ) || isset( $prop['userid'] ) ) {
 
-			if ( isset( $prop['user'] ) ) {
-				$vals['user'] = $file->getUser();
-			}
-			if ( isset( $prop['userid'] ) ) {
-				$vals['userid'] = $file->getUser( 'id' );
-			}
-			if ( !$file->getUser( 'id' ) ) {
-				$vals['anon'] = '';
+		$user = isset( $prop['user'] );
+		$userid = isset( $prop['userid'] );
+
+		if ( $user || $userid ) {
+			if ( $file->isDeleted( File::DELETED_USER ) ) {
+				$vals['userhidden'] = '';
+			} else {
+				if ( $user ) {
+					$vals['user'] = $file->getUser();
+				}
+				if ( $userid ) {
+					$vals['userid'] = $file->getUser( 'id' );
+				}
+				if ( !$file->getUser( 'id' ) ) {
+					$vals['anon'] = '';
+				}
 			}
 		}
+
+		// This is shown even if the file is revdelete'd in interface
+		// so do same here.
 		if ( isset( $prop['size'] ) || isset( $prop['dimensions'] ) ) {
 			$vals['size'] = intval( $file->getSize() );
 			$vals['width'] = intval( $file->getWidth() );
@@ -236,9 +248,43 @@ class ApiQueryImageInfo extends ApiQueryBase {
 				$vals['pagecount'] = $pageCount;
 			}
 		}
-		if ( isset( $prop['url'] ) ) {
-			if ( !is_null( $scale ) && !$file->isOld() ) {
-				$mto = $file->transform( array( 'width' => $scale['width'], 'height' => $scale['height'] ) );
+
+		$pcomment = isset( $prop['parsedcomment'] );
+		$comment = isset( $prop['comment'] );
+
+		if ( $pcomment || $comment ) {
+			if ( $file->isDeleted( File::DELETED_COMMENT ) ) {
+				$vals['commenthidden'] = '';
+			} else {
+				if ( $pcomment ) {
+					global $wgUser;
+					$vals['parsedcomment'] = $wgUser->getSkin()->formatComment(
+						$file->getDescription(), $file->getTitle() );
+				}
+				if ( $comment ) {
+					$vals['comment'] = $file->getDescription();
+				}
+			}
+		}
+
+		$url = isset( $prop['url'] );
+		$sha1 = isset( $prop['sha1'] );
+		$meta = isset( $prop['metadata'] );
+		$mime = isset( $prop['mime'] );
+		$archive = isset( $prop['archivename'] );
+		$bitdepth = isset( $prop['bitdepth'] );
+
+		if ( ( $url || $sha1 || $meta || $mime || $archive || $bitdepth )
+				&& $file->isDeleted( File::DELETED_FILE ) ) {
+			$vals['filehidden'] = '';
+
+			//Early return, tidier than indenting all following things one level
+			return $vals;
+		}
+
+		if ( $url ) {
+			if ( !is_null( $thumbParams ) ) {
+				$mto = $file->transform( $thumbParams );
 				if ( $mto && !$mto->isError() ) {
 					$vals['thumburl'] = wfExpandUrl( $mto->getUrl() );
 
@@ -256,36 +302,32 @@ class ApiQueryImageInfo extends ApiQueryBase {
 						$thumbFile = UnregisteredLocalFile::newFromPath( $mto->getPath(), false );
 						$vals['thumbmime'] = $thumbFile->getMimeType();
 					}
+				} else if ( $mto && $mto->isError() ) {
+					$vals['thumberror'] = $mto->toText();
 				}
 			}
 			$vals['url'] = $file->getFullURL();
 			$vals['descriptionurl'] = wfExpandUrl( $file->getDescriptionUrl() );
 		}
-		if ( isset( $prop['comment'] ) ) {
-			$vals['comment'] = $file->getDescription();
-		}
-		if ( isset( $prop['parsedcomment'] ) ) {
-			global $wgUser;
-			$vals['parsedcomment'] = $wgUser->getSkin()->formatComment( 
-					$file->getDescription(), $file->getTitle() );
-		}
 		
-		if ( isset( $prop['sha1'] ) ) {
+		if ( $sha1 ) {
 			$vals['sha1'] = wfBaseConvert( $file->getSha1(), 36, 16, 40 );
 		}
-		if ( isset( $prop['metadata'] ) ) {
+
+		if ( $meta ) {
 			$metadata = $file->getMetadata();
 			$vals['metadata'] = $metadata ? self::processMetaData( unserialize( $metadata ), $result ) : null;
 		}
-		if ( isset( $prop['mime'] ) ) {
+
+		if ( $mime ) {
 			$vals['mime'] = $file->getMimeType();
 		}
 
-		if ( isset( $prop['archivename'] ) && $file->isOld() ) {
+		if ( $archive && $file->isOld() ) {
 			$vals['archivename'] = $file->getArchiveName();
 		}
 
-		if ( isset( $prop['bitdepth'] ) ) {
+		if ( $bitdepth ) {
 			$vals['bitdepth'] = $file->getBitDepth();
 		}
 
